--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray_dark">@android:color/darker_gray</color>
     <color name="gray_light">#C8C8C8</color>
+    <color name="gray_text">#505050</color>
 </resources>
