--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -22,7 +22,7 @@
             android:orientation="vertical"
             android:padding="24dp">
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Login"
@@ -31,7 +31,7 @@
                 android:textSize="36sp"
                 android:textStyle="bold" />
 
-            <EditText
+            <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/login_username"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -46,7 +46,7 @@
                 android:textColor="@color/black"
                 android:textColorHint="#757575" />
 
-            <EditText
+            <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/login_password"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -62,12 +62,15 @@
                 android:textColor="@color/black"
                 android:textColorHint="#757575" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/enter_login"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="50dp"
                 android:layout_marginTop="20dp"
+                android:background="@drawable/custom_shape"
+                android:textColor="@color/white"
                 android:backgroundTint="@color/gray_text"
+                android:textStyle="bold"
                 android:text="Enter"
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
