--- a/app/src/main/res/layout/fragment_notelist.xml
+++ b/app/src/main/res/layout/fragment_notelist.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,13 +12,6 @@
         android:layout_weight="1"
         tools:listitem="@layout/item_note"/>
 
-    <Button
-        android:id="@+id/button_to_fragment"
-        android:text="ADD NOTE"
-        android:backgroundTint="@color/gray_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="16dp" />
 
 </LinearLayout>
+
