--- a/app/src/main/res/layout/fragment_onboarding_step.xml
+++ b/app/src/main/res/layout/fragment_onboarding_step.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image_View"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,13 +16,16 @@
         tools:src="@drawable/ic_launcher_foreground" />
 
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@color/gray_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image_View"
+        app:layout_constraintTop_toBottomOf="@+id/image_View"
         tools:text="Title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
